# ShowMeYourMoves

./: Command_Publisher.py  Memory Reader.py  MemoryEngineInstall.sh  MemoryLocations.txt  README.md  asGoodAsZack.py  fd_adresses.json
src/: dolphinListener.py  mem_example.py  memorywatcher.py  memwatch.rb  prinemem.py  readAddy  readAddy.cpp  readmem  readmem.c
src/Our-Dolphin/: testLib.py
src/Our-Dolphin/Source/: CMakeLists.txt  __init__.py  bindings.cpp  main.cpp
src/Our-Dolphin/Source/Common/: MemoryCommon.cpp
src/Our-Dolphin/Source/Dolphin-Watcher/: Addresses.h  DolphinWatcher.cpp  DolphinWatcher.h
src/Our-Dolphin/Source/DolphinProcess/: DolphinAccessor.cpp  DolphinAccessor.h
src/Our-Dolphin/Source/MemoryWatch/: MemWatchEntry.cpp  MemWatchEntry.h
